--- a/frontend/src/assets/css/forgot-password.css
+++ b/frontend/src/assets/css/forgot-password.css
@@ -9,7 +9,7 @@ div.forgot-password {
 div.forgot-password h1.forgot-password-title {
   text-align: center;
   margin-top: 0;
-  color: #f37022;
+  color: #AE8625;
 }
 
 .forgot-password-form h1 {
