--- a/frontend/src/assets/css/signin.css
+++ b/frontend/src/assets/css/signin.css
@@ -3,7 +3,7 @@ div.signin .signin-form-title {
   text-align: center;
   text-transform: capitalize;
   margin-top: 35px;
-  color: #f37022;
+  color: #AE8625;
 }
 
 div.signin div.signin-buttons {
