--- a/frontend/src/assets/css/activate.css
+++ b/frontend/src/assets/css/activate.css
@@ -21,7 +21,7 @@ div.resend {
 .activate-form h1,
 .resend-form h1 {
   text-align: center;
-  color: #f37022;
+  color: #AE8625;
 }
 
 .resend-form div.resend-form-content {
