--- a/frontend/src/assets/css/car-filter.css
+++ b/frontend/src/assets/css/car-filter.css
@@ -16,7 +16,7 @@ div.car-filter .chk-same-location {
 }
 
 div.car-filter .btn-search {
-  background: #f37022;
+  background: #AE8625;
   color: #fff;
   margin: 5px 0;
 }
