--- a/frontend/src/assets/css/change-password.css
+++ b/frontend/src/assets/css/change-password.css
@@ -9,7 +9,7 @@
 .password-reset-form-title {
   text-align: center;
   margin-top: 0;
-  color: #f37022;
+  color: #AE8625;
 }
 
 /* Device width is less than or equal to 960px */
