--- a/frontend/src/assets/css/common.css
+++ b/frontend/src/assets/css/common.css
@@ -4,7 +4,7 @@
 }
 
 .btn-primary {
-  background-color: #f37022 !important;
+  background-color: #AE8625 !important;
   color: #ffffff !important;
 }
 
@@ -53,7 +53,7 @@
 }
 
 .msg h2 {
-  color: #f37022;
+  color: #AE8625;
 }
 
 .msg p {
