--- a/frontend/src/assets/css/settings.css
+++ b/frontend/src/assets/css/settings.css
@@ -6,7 +6,7 @@ div.settings .settings-form-wrapper {
 div.settings .settings-form-title {
   text-align: center;
   text-transform: capitalize;
-  color: #f37022;
+  color: #AE8625;
 }
 
 div.settings .settings-net-wrapper {
