--- a/frontend/src/assets/css/signup.css
+++ b/frontend/src/assets/css/signup.css
@@ -2,7 +2,7 @@
 div.signup .signup-form-title {
   text-align: center;
   text-transform: capitalize;
-  color: #f37022;
+  color: #AE8625;
 }
 
 div.signup div.signup-tos {
